--- a/app/src/main/res/layout/activity_reflection.xml
+++ b/app/src/main/res/layout/activity_reflection.xml
@@ -47,4 +47,15 @@
         app:layout_constraintTop_toBottomOf="@id/btn_test_activityThread_h" />
 
 
+    <Button
+        android:id="@+id/btn_test_activityThread_joor"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="查看ActivityThread by Joor"
+        android:textAllCaps="false"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btn_test_activityThread" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
