--- a/app/src/main/res/layout/activity_reflection.xml
+++ b/app/src/main/res/layout/activity_reflection.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:text="SDK信息"
         android:gravity="center"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -20,6 +21,7 @@
         android:id="@+id/btn_test_VMRuntime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:text="查看VMRuntime"
         android:textAllCaps="false"
         app:layout_constraintEnd_toEndOf="parent"
